# modeldelta

./: .gitignore  EXPERIMENT_GEOMETRIC_REGIMES_UP_TO_32B.md  LICENSE  MODELDELTA_ARXIV_BRIEFING.md  PROJECT.md  README.md  STATUS.md  index.html  pyproject.toml
model_diff/: __init__.py  cli.py
modeldelta/: __init__.py  __main__.py  cli.py
modeldelta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notebooks/: model_diff_v0_batch_colab.ipynb  model_diff_v0_llama_colab.ipynb  model_diff_v0_poc_colab.ipynb  modeldelta_phase1_colab.ipynb  test_modeldelta_pypi.ipynb
paper/: README.md  final_table_paper.csv  oq_ratio_paper.tex  references.bib
reports/: 06e05e25faf2510d.html  12790541125b9c86.html  190e48bee7067875.html  21c1dbf1798cd2c2.html  27b5bb5bb8fe3974.html  290a12d09e2d986c.html  2cd93b5ce021d62f.html  2ceaddad781d2dfb.html  3c1f26c7cebbdfc3.html  3d5ea47f888ff7c6.html  430e64db8d29edb5.html  45e0911e1a298111.html  475850f23b357034.html  480e611523f72c7b.html  4af8aef4e78bdeea.html  4b4b52a4da8f0a3e.html  4ecc901306a7a056.html  515851efbdca98e3.html  5a162d79fd070644.html  5aba33d674f230d7.html  64c35969cd11f415.html  6fe00ac4c180d029.html  7a8554f46e7f0256.html  7ccf48d89f584fff.html  8288bf45dd82333e.html  96255c050e0dcb62.html  9df6c430a1d1fad1.html  a6bf5b5d9c33dbdd.html  ac43766a24a117d4.html  b20f6b4d7f326c89.html  b8737ebdcbdfbe88.html  bbdbe8f44192768f.html  c0c4424cbc678418.html  c3de2f85bacb046b.html  c908a270e255c7b1.html  cdc5fe5528cfc601.html  cf791d84d5e9bfe0.html  d1e3a4911ed59fee.html  d6ec786afe31ffb2.html  (+15 more)
(+18 files in other folders)
