[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeldelta"
version = "0.2.0"
description = "CLI tool to compare model checkpoints — weight deltas, SVD structure, layer drift"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Nick Yudin"}]
readme = "README.md"
dependencies = [
    "torch>=2.0",
    "safetensors>=0.4",
    "huggingface-hub>=0.20",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "click>=8.0",
]

[project.scripts]
modeldelta = "modeldelta.cli:main"

[tool.setuptools.packages.find]
include = ["modeldelta*"]
